<resources>
    <string name="app_name">PrivateScrambler</string>

    <string name="edit_message">Enter a message to share</string>
    <string name="edit_message2">Paste here...</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search Me</string>
    <string name="button_sendEnc">Encrypt</string>
    <string name="button_sendDec">Decrypt</string>
    <string name="button_shareEnc">Share Me</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="chooser_title">MyTitle</string>
    <string name="send_to">Share</string>
</resources>
