<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_shareEnc"
        android:onClick="shareMessageEnc"
        android:layout_gravity="right"
        android:id="@+id/button2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_weight="0.10"
        android:layout_width="fill_parent"
        android:hint="@string/edit_message"
        android:layout_height="0dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text=""
        android:hint="@string/edit_message2"
        android:id="@+id/editMsgMain"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.17">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sendDec"
            android:onClick="sendMessageDec"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/button"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sendEnc"
            android:onClick="sendMessageEnc"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible" />
    </RelativeLayout>
</LinearLayout>